# snapmaker-studio

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PROOF.md  README.md
.claude-octopus/: state.json  state.json.backup
backend/: README.md  pyproject.toml  requirements-build.txt  sidecar_main.py
backend/snapstudio_api/: __init__.py  __main__.py  request_validation.py  server.py  service.py
backend/snapstudio_core/: batch.py  bed_fit.py  canonical.py  collision.py  community_knowledge.py  compatibility.py  config_io.py  container.py  convert.py  cost_estimate.py  detect.py  diff.py  doctor.py  errors.py  failure_patterns.py  filaments.py  fingerprint.py  firmware_caps.py  first_layer.py  first_layer_doctor.py  geometry.py  health_score.py  intelligence.py  intelligence_report.py  layout.py  library.py  mesh_diagnostics.py  mm_doctor.py  model_search.py  moonraker.py  optimize.py  plate_remap.py  pricing.py  print_failure.py  print_quality.py  profile.py  profiles_extract.py  quality_evidence.py  repair.py  report.py  (+11 more)
backend/snapstudio_core/data/: u1_filament_arrays.json  u1_rules.json
backend/snapstudio_core/data/optimizations/: u1_fast_prime_tower.json
backend/snapstudio_core/data/profiles/: snapmaker_u1.json
backend/snapstudio_core/data/templates/: u1_base_project_settings.json
backend/tests/: test_api.py  test_api_contract.py  test_batch.py  test_bed_fit.py  test_business_math.py  test_canonical.py  test_collision.py  test_community_knowledge.py  test_compatibility.py  test_cost_estimate.py  test_doctor_stl.py  test_failure_patterns.py  test_firmware_caps.py  test_first_layer.py  test_first_layer_doctor.py  test_health_score.py  test_intelligence_report.py  test_layout.py  test_library.py  test_library_migration.py  test_mesh_diagnostics.py  test_mm_doctor.py  test_model_search.py  test_moonraker.py  test_plate_remap.py  test_plate_remap_fixture.py  test_pricing.py  test_print_failure.py  test_print_quality.py  test_printer_control.py  test_public_claims.py  test_quality_evidence.py  test_readiness_truth.py  test_report.py  test_scale_doctor.py  test_scale_export.py  test_scale_options.py  test_source_detection.py  test_strategies.py  test_success_predict.py  (+2 more)
backend/u1convert/: cli.py
backend/validation/: report.md
desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: ARCHITECTURE.md  BETA_READINESS_REPORT.md  BETA_RELEASE_PLAN.md  DEMO_SCRIPT.md  DEMO_SCRIPT_BETA9.md  DEMO_VIDEO_SCRIPT.md  INNOVATION_FUND.md  INSTALLER_SMOKE_TEST.md  JUDGE_DEMO.md  JUDGE_OVERVIEW.md  NOVICE_UX_RED_TEAM.md  ORCA_2_3_4_VALIDATION.md  OVERNIGHT_DIFFERENTIATION_REPORT.md  PRINTER_HUB_VERIFICATION.md  PRINT_STRATEGIES.md  PRODUCT_MISSION.md  PRODUCT_VISION.md  (+27 more)
(+176 files in other folders)
