[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "snapmaker-studio"
version = "0.2.0"
description = "The compatibility layer for Snapmaker U1 - convert, repair, validate, and optimize 3MF and STL projects."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Snapmaker Studio contributors" }]
keywords = ["snapmaker", "u1", "3mf", "stl", "3d-printing", "orca", "bambu", "slicer"]
dependencies = ["lxml>=5", "click>=8"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Printing",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
u1convert = "u1convert.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["snapstudio_core*", "u1convert*"]
