[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "snapmaker-studio"
version = "0.4.0b9"
description = "Snapmaker Studio engine — a local-first workflow platform for modern 3D printing: understand, validate, and prepare designs print-ready (Bambu/Orca/STL today; Snapmaker U1 as the first printer target)."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Snapmaker Studio contributors" }]
keywords = ["3d-printing", "print-ready", "validation", "workflow", "local-first", "snapmaker", "u1", "3mf", "stl", "orca", "bambu"]
dependencies = ["lxml>=6.1,<7", "click>=8.1,<9"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Printing",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
u1convert = "u1convert.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["snapstudio_core*", "u1convert*"]
